tests/c/internal/negative_case/bad_global_static_extern_linkage_conflict.c
// Expected: compile fail (extern declaration has initializer with undeclared symbol)
extern int ext = missing_value;

int main(void) {
  return ext;
}
